# golfbot

./: .example.env  .gitignore  bot_main.py  pyproject.toml
core/: config.py  config_logging.py  middleware.py
core/dialogs/: api_urls.py  game_rules.py  keyboards.py  pluralization_rules.py  states.py  windows.py
core/dialogs/getters/: __init__.py  admins.py  emoji.py  holes.py  registration_bot.py  tournament.py  users.py
core/dialogs/schemas/: admins.py  courses.py  holes.py  schemas.py  scores.py  totalscores.py  tournaments.py  users.py
core/dialogs/selected/: __init__.py  admin.py  game.py  main_menu.py  registration_bot.py  registration_tournament.py  tournament.py
core/dialogs/services/: __init__.py  admins.py  base.py  common.py  course.py  holes.py  scores.py  totalscores.py  tournaments.py  users.py
core/dialogs/utils/: alphabet.py  custom_calendar.py  emoji.py  game_rules.py  getters_obj_from_list.py
core/dialogs/windows/: __init__.py  admins.py  game.py  main_menu.py  registration_bot.py  registration_tournament.py
core/main/: commands.py
core/main/handlers/: __init__.py  client.py
core/main/keyboards/: buttons.py
